tests/analyzer/errors/already_declared.rv
struct Name {}
struct Name {}

fn main() {
    {
        var loc1 = "local"
        var loc1 = " var"
    }
}
